Fixed action uses

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,11 @@ jobs:
 
     steps:
     - name: Make envfile
-      uses: SpicyPizza/create-envfile@${{ github.sha }}
+      uses: ./
+      with:
+        envkey_DEBUG: false
+        envkey_SOME_API_KEY: "123456abcdef"
+        envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        some_other_variable: foobar
+        directory: <directory_name>
+        file_name: .env
