--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,14 +22,4 @@ jobs:
 
     - name: Verify envfile
       run: |
-        python --version
-        echo "----"
-        pwd
-        echo "----"
-        ls -al
-        echo "----"
-        ls -al /github
-        echo "----"
-        ls -al /github/workspace
-        echo "----"
-        cat /github/workspace/.env
+        cat .env
