--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,15 +15,16 @@ jobs:
       uses: ./
       with:
         envkey_DEBUG: false
-        envkey_SOME_API_KEY: "123456abcdef"
-        envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        # envkey_SOME_API_KEY: "123456abcdef"
+        # envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         some_other_variable: foobar
         file_name: .env
 
     - name: Verify envfile
       run: |
         cat .env
-        TEST="DEBUG=false\nSECRET_KEY=***\nSOME_API_KEY=123456abcdef"
+        # TEST="DEBUG=false\nSECRET_KEY=***\nSOME_API_KEY=123456abcdef\n"
+        TEST="DEBUG=false\n"
         if [ "$TEST" != "$(cat .env)" ]
         then
             exit 1
