--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       uses: ./
       with:
         envkey_DEBUG: false
-        # envkey_SOME_API_KEY: "123456abcdef"
+        envkey_SOME_API_KEY: "123456abcdef"
         # envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         some_other_variable: foobar
         file_name: .env
@@ -24,7 +24,7 @@ jobs:
       run: |
         cat .env
         # TEST="DEBUG=false\nSECRET_KEY=***\nSOME_API_KEY=123456abcdef\n"
-        TEST="DEBUG=false"
+        TEST="DEBUG=false\nSOME_API_KEY=123456abcdef"
         if [ "$TEST" != "$(cat .env)" ]
         then
             exit 1
