--- a/action.yml
+++ b/action.yml
@@ -15,5 +15,5 @@ inputs:
     description: "Fail if an env key is an empty string"
     default: "false"
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: 'node16'
+  main: 'dist/index.js'
