--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -218,6 +218,15 @@ jobs:
         with:
           envkey_SECRET_KEY: ''
           fail_on_empty: true
+        continue-on-error: true
+
+      - name: Verify last step failed
+        run: |
+          if [ $? -eq 0 ]
+          then
+            echo "Expected last step to fail"
+            exit 1
+          fi
 
   test-empty-envkey-default-option:
     runs-on: ubuntu-latest
