--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -217,7 +217,7 @@ jobs:
         uses: ./
         with:
           envkey_SECRET_KEY: ''
-          fail_on_empty: true
+          # fail_on_empty: true
         continue-on-error: true
 
       - name: Verify last step failed
