--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -218,7 +218,7 @@ jobs:
         id: make_envfile
         with:
           envkey_SECRET_KEY: ''
-          # fail_on_empty: true
+          fail_on_empty: true
         continue-on-error: true
 
       - name: Verify last step failed
