--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,6 +6,5 @@
       "outDir": "./lib",                       /* Redirect output structure to the directory. */
       "rootDir": "./src"                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     },
-    "exclude": ["__tests__", "dist", "lib", "node_modules"]
+    "exclude": ["dist", "lib", "node_modules"]
   }
-  
