--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./lib",                        /* Redirect output structure to the directory. */
     "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
   },
-  "include": ["src/**/*", "__tests__/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["dist", "lib", "node_modules"]
 }
