--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-action",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "private": true,
   "description": "TypeScript template action",
   "main": "lib/main.js",
@@ -10,8 +10,7 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src --ext .ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "yarn run build && yarn run format && yarn run lint && yarn run package && yarn test"
+    "all": "yarn run build && yarn run format && yarn run lint && yarn run package"
   },
   "repository": {
     "type": "git",
@@ -35,10 +34,8 @@
     "eslint": "^8.39.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
