--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -29,6 +29,7 @@ jobs:
           file_name: .env
 
       - name: Verify envfile
+        shell: bash
         run: |
           TEST=$(cat <<-END
           DEBUG=false
