--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -124,28 +124,6 @@ jobs:
         run: |
           rm -rf subdir
 
-      - name: Test should fail absolute path
-        uses: ./
-        with:
-          envkey_DEBUG: false
-          directory: /home
-        continue-on-error: true
-
-      - name: Test should fail bad secret
-        uses: ./
-        with:
-          fail_on_empty: true
-          envkey_SECRET_KEY: ${{ secrets.NON_EXISTENT_SECRET }}
-        continue-on-error: true
-
-      - name: Test should fail empty envkey
-        uses: ./
-        id: make_envfile
-        with:
-          envkey_SECRET_KEY: ''
-          fail_on_empty: true
-        continue-on-error: true
-
       - name: Test empty envkey default option
         uses: ./
         with:
@@ -171,3 +149,58 @@ jobs:
         shell: bash
         run: |
           rm .env
+
+      - name: Test sorted envkeys works
+        uses: ./
+        with:
+          envkey_C: 'C'
+          envkey_A: 'A'
+          envkey_B: 'B'
+          sort_keys: true
+
+      - name: Verify envfile
+        shell: bash
+        run: |
+          TEST=$(cat <<-END
+          A=A
+          B=B
+          C=C
+          END
+          )
+          if [ "$TEST" != "$(cat .env)" ]
+          then
+            echo "Actual:"
+            cat .env
+            echo "Expected:"
+            echo "$TEST"
+            exit 1
+          fi
+
+      - name: Cleanup
+        shell: bash
+        run: |
+          rm .env
+
+      - name: Test should fail absolute path
+        uses: ./
+        with:
+          envkey_DEBUG: false
+          directory: /home
+        continue-on-error: true
+
+      - name: Test should fail bad secret
+        uses: ./
+        with:
+          fail_on_empty: true
+          envkey_SECRET_KEY: ${{ secrets.NON_EXISTENT_SECRET }}
+        continue-on-error: true
+
+      - name: Test should fail empty envkey
+        uses: ./
+        id: make_envfile
+        with:
+          envkey_SECRET_KEY: ''
+          fail_on_empty: true
+        continue-on-error: true
+
+
