--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   fail_on_empty:
     description: "Fail if an env key is an empty string"
     default: "false"
+  sort_keys:
+    description: "Sort the keys alphabetically"
+    default: "false"
 runs:
   using: 'node16'
   main: 'dist/index.js'
