--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,22 @@
-name: "Create .env file"
-description: "Github Action to create a .env file with Github Secrets"
-author: "Forest Anderson"
+name: 'Create .env file'
+description: 'GitHub Action to create a .env file with GitHub Secrets'
+author: 'Forest Anderson'
 branding:
-  icon: "briefcase"
-  color: "gray-dark"
+  icon: 'briefcase'
+  color: 'gray-dark'
 inputs:
   file_name:
-    description: "The filename for the envfile"
-    default: ".env"
+    description: 'The filename for the envfile'
+    default: '.env'
   directory:
-    description: "The directory to put the envfile in"
-    default: ""
+    description: 'The directory to put the envfile in'
+    default: ''
   fail_on_empty:
-    description: "Fail if an env key is an empty string"
-    default: "false"
+    description: 'Fail if an env key is an empty string'
+    default: 'false'
   sort_keys:
-    description: "Sort the keys alphabetically"
-    default: "false"
+    description: 'Sort the keys alphabetically'
+    default: 'false'
 runs:
   using: 'node16'
   main: 'dist/index.js'
