--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -203,4 +203,28 @@ jobs:
           fail_on_empty: true
         continue-on-error: true
 
+      - name: Make envfile
+        uses: ./
+        with:
+          # We use a variable instead of a secret here so that CI can run
+          # properly on forks.
+          envkey_MULTILINE_SECRET: ${{ secrets.MULTILINE_SECRET }}
 
+      - name: Verify envfile
+        shell: bash
+        run: |
+          TEST=$(cat <<-END
+          MULTILINE_SECRET="first line\nsecond line"
+          END
+          )
+          if [ "$TEST" != "$(cat .env)" ]
+          then
+            echo "Actual:"
+            cat .env
+            echo "Expected:"
+            echo "$TEST"
+            exit 1
+          fi
+
+      - name: Cleanup
+        run: rm .env
