--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -22,8 +22,6 @@ jobs:
         with:
           envkey_DEBUG: false
           envkey_SOME_API_KEY: '123456abcdef'
-          # We use a variable instead of a secret here so that CI can run
-          # properly on forks.
           envkey_SECRET_KEY: ${{ secrets.SECRET_KEY }}
           some_other_variable: foobar
           file_name: .env
@@ -35,6 +33,30 @@ jobs:
           DEBUG=false
           SECRET_KEY=password123
           SOME_API_KEY=123456abcdef
+          END
+          )
+          if [ "$TEST" != "$(cat .env)" ]
+          then
+            echo "Actual:"
+            cat .env
+            echo "Expected:"
+            echo "$TEST"
+            exit 1
+          fi
+
+      - name: Cleanup
+        run: rm .env
+
+      - name: Test use GitHub Action multiline secret
+        uses: ./
+        with:
+          envkey_MULTILINE_SECRET: ${{ secrets.MULTILINE_SECRET }}
+
+      - name: Verify envfile
+        shell: bash
+        run: |
+          TEST=$(cat <<-END
+          MULTILINE_SECRET="line 1\nline 2"
           END
           )
           if [ "$TEST" != "$(cat .env)" ]
