Update yarn, change package

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,12 @@ Thumbs.db
 # Ignore built ts files
 __tests__/runner/*
 lib/**/*
+
+# Yarn v3
+.pnp.*
+.yarn/*
+.yarn/patches
+.yarn/plugins
+.yarn/releases
+.yarn/sdks
+.yarn/versions
