--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "create-envfile",
   "version": "2.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Github Action to create a .env file with Github Secrets ",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/SpicyPizza/create-envfile"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "",
+  "author": "Forest Anderson",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0"
@@ -37,5 +37,6 @@
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
