Add ignored stuff

--- a/.gitignore
+++ b/.gitignore
@@ -100,9 +100,9 @@ lib/**/*
 
 # Yarn v3
 .pnp.*
-.yarn/*
+.yarn/cache
 .yarn/patches
 .yarn/plugins
-.yarn/releases
 .yarn/sdks
 .yarn/versions
+.yarn/install-state.gz
