--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,12 @@ Thumbs.db
 # Ignore built ts files
 __tests__/runner/*
 lib/**/*
+
+# Yarn v3
+.pnp.*
+.yarn/cache
+.yarn/patches
+.yarn/plugins
+.yarn/sdks
+.yarn/versions
+.yarn/install-state.gz
